# NullMPI

./: .cvsignore  .gitignore  AUTHORS  COPYING  INSTALL  LICENSE  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  makerelease.in
m4/: ac_c_var_func.m4  ax_prefix_config_h.m4
man/: .gitignore  MPI_Init.3  mpiCC.1.in  mpicc.1.in  mpicxx.1  mpicxx.1.in  mpiexec.1.in  mpirun.1
pmpi/: .gitignore  Makefile.am  allgather.c  allgatherv.c  allreduce.c  alltoall.c  alltoallv.c  barrier.c  bcast.c  bsend.c  bsend_init.c  buffer_attach.c  buffer_detach.c  cancel.c  cart_coords.c  cart_create.c  cart_get.c  cart_map.c  cart_rank.c  cart_shift.c  cart_sub.c  cartdim_get.c  comm_compare.c  comm_create.c  comm_dup.c  comm_free.c  comm_group.c  comm_rank.c  comm_remote_group.c  comm_remote_size.c  comm_size.c  comm_split.c  comm_test_inter.c  dims_create.c  error_class.c  error_string.c  finalize.c  gather.c  gatherv.c  get_count.c  (+74 more)
src/: .cvsignore  .gitignore  .splintrc  Makefile.am  mpi.c  mpi.h  mpi2.h  mpi_abort.c  mpi_address.c  mpi_allgather.c  mpi_allgatherv.c  mpi_allreduce.c  mpi_alltoall.c  mpi_alltoallv.c  mpi_barrier.c  mpi_bcast.c  mpi_bsend.c  mpi_bsend_init.c  mpi_buffer_attach.c  mpi_buffer_detach.c  mpi_cancel.c  mpi_cart.c  mpi_cart_coords.c  mpi_cart_create.c  mpi_cart_get.c  mpi_cart_map.c  mpi_cart_rank.c  mpi_cart_shift.c  mpi_cart_sub.c  mpi_cartdim_get.c  mpi_coll.c  mpi_comm.c  mpi_comm_compare.c  mpi_comm_create.c  mpi_comm_dup.c  mpi_comm_free.c  mpi_comm_group.c  mpi_comm_rank.c  mpi_comm_remote_group.c  mpi_comm_remote_size.c  (+95 more)
tests/: .gitignore  Makefile.am  nonblock.c  t.c
