## process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libnullpmpi.la
libnullpmpi_la_SOURCES = \
	abort.c \
	allgather.c \
	allgatherv.c \
	allreduce.c \
	alltoall.c \
	alltoallv.c \
	barrier.c \
	bcast.c \
	bsend.c \
	bsend_init.c \
	buffer_attach.c \
	buffer_detach.c \
	cancel.c \
	cart_coords.c \
	cart_create.c \
	cart_get.c \
	cart_map.c \
	cart_rank.c \
	cart_shift.c \
	cart_sub.c \
	cartdim_get.c \
	comm_compare.c \
	comm_create.c \
	comm_dup.c \
	comm_free.c \
	comm_group.c \
	comm_rank.c \
	comm_remote_group.c \
	comm_remote_size.c \
	comm_size.c \
	comm_split.c \
	comm_test_inter.c \
	dims_create.c \
	error_class.c \
	error_string.c \
	finalize.c \
	gather.c \
	gatherv.c \
	get_count.c \
	get_elements.c \
	get_processor_name.c \
	get_version.c \
	graph_create.c \
	graph_get.c \
	graph_map.c \
	graph_neighbors.c \
	graph_neighbors_count.c \
	graphdims_get.c \
	group_compare.c \
	group_difference.c \
	group_excl.c \
	group_free.c \
	group_incl.c \
	group_intersection.c \
	group_range_excl.c \
	group_range_incl.c \
	group_rank.c \
	group_size.c \
	group_translate_ranks.c \
	group_union.c \
	ibsend.c \
	initialized.c \
	intercomm_create.c \
	intercomm_merge.c \
	iprobe.c \
	irecv.c \
	irsend.c \
	isend.c \
	issend.c \
	op_create.c \
	op_free.c \
	out.c \
	pack.c \
	pack_size.c \
	probe.c \
	recv.c \
	recv_init.c \
	reduce.c \
	reduce_scatter.c \
	request_free.c \
	rsend.c \
	rsend_init.c \
	scan.c \
	scatter.c \
	scatterv.c \
	send.c \
	send_init.c \
	sendrecv.c \
	sendrecv_replace.c \
	ssend.c \
	ssend_init.c \
	start.c \
	startall.c \
	test.c \
	test_cancelled.c \
	testall.c \
	testany.c \
	testsome.c \
	topo_test.c \
	type_commit.c \
	type_contiguous.c \
	type_count.c \
	type_free.c \
	type_indexed.c \
	type_size.c \
	type_vector.c \
	unpack.c \
	wait.c \
	waitall.c \
	waitany.c \
	waitsome.c \
	pmpi_wrap.h

libnullpmpi_la_LIBADD = ../src/libnullmpi.la

AM_CPPFLAGS = -I$(srcdir)/../src -DPROFILELIB
